# IGVC-2016

./: .gitmodules  README.md  auto.launch  driving.launch  ekf.launch  exploration.launch  exploration_demo.launch  gps.launch  hectortest.launch  husky-base.sh  husky-joy.sh  husky.sh  igvcnavigation.launch  igvcsetup.sh  lidar.sh  localization.launch  move_base.launch  odom-test.launch  simulate.launch  simulate.launch~  start-gps.sh
src/: .gitignore
src/ROS Driver/: README.txt  package.xml
src/ROS Driver/motor_controller_test/: CMakeLists.txt
src/ROS Driver/motor_controller_test/scripts/: joyDrive.py
src/igvc_2dnav/: CMakeLists.txt  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  package.xml
src/igvc_2dnav/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  planner.yaml
src/motor_controller_test/: package.xml
src/motor_controller_test/scripts/: joyDrive.py  joyDriveHolonomic.py  roboclaw.py  roboclaw_speed.py
src/odom/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt  package.xml
src/perception/src/: perception.cpp  perception.cpp~  perception.h  testing.py~
src/robot_control/: CMakeLists.txt  package.xml
src/robot_description/: CMakeLists.txt  igvc.urdf~  package.xml  package.xml~
src/robot_description/launch/: robot_world.launch  robot_world.launch~
src/robot_description/urdf/: igvc.gazebo  igvc.urdf  igvc.xacro  igvc.xacro~
src/robot_gazebo/: package.xml  package.xml~
src/robot_gazebo/launch/: robot_world.launch  robot_world.launch~
src/robot_gazebo/worlds/: testCubes.world
src/sparton_compass_imu/: CMakeLists.txt  GEDC-6.launch  package.xml
src/sparton_compass_imu/src/: SpartonCompassIMU.py
