<?xml version="1.0"?>
<package>
  <name>perception</name>
  <version>0.1.0</version>
  <description>This is a custom package for IGVC image Processing
    for interfacing with the ZED camera.
  </description>
<maintainer email="blanknc@rose-hulman.com">Nathan Blank</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp_serialization</build_depend> 
  <build_depend>tf</build_depend>
 <build_depend>image_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
   <run_depend>roscpp_serialization</run_depend> 
   <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_geometry</run_depend>
  
  <export>
  </export>
</package>
