<package>
  <name>sparton_compass_imu</name>
  <version>0.1.0</version>
  <description>This is a package for The Sparton IMU
  </description>
<maintainer email="blanknc@rose-hulman.com">Nathan Blank</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <export>
  </export>
</package>
